// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table matches snapshot for example: example mount 1`] = `
.emotion-4 {
  border: 0;
  border-collapse: collapse;
  box-sizing: border-box;
  border-spacing: 0;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 14px;
  line-height: 1.1428571429;
  width: 100%;
}

@media only screen and (min-width:641px) {
  .emotion-4 {
    font-size: 16px;
    line-height: 1.25;
  }
}

.emotion-0 {
  font-family: "nta",Arial,sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.25;
  text-align: left;
  text-transform: none;
  width: 100%;
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-1 {
  border: 0;
  border-bottom: 1px solid #bfc1c3;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  padding: 0.63158em 1.05263em 0.47368em 0;
  text-align: left;
  text-transform: none;
  word-break: break-word;
}

.emotion-1:last-child {
  padding-right: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

<Table
  body={
    <Row>
      <Cell>
        Example
      </Cell>
    </Row>
  }
>
  <Styled(table)>
    <table
      className="emotion-4"
    >
      <Styled(caption)>
        <caption
          className="emotion-0"
        />
      </Styled(caption)>
      <Styled(tbody)>
        <tbody
          className="emotion-2"
        >
          <Row>
            <Styled(tr)>
              <tr
                className="emotion-2"
              >
                <Cell>
                  <Styled(td)>
                    <td
                      className="emotion-1"
                    >
                      Example
                    </td>
                  </Styled(td)>
                </Cell>
              </tr>
            </Styled(tr)>
          </Row>
        </tbody>
      </Styled(tbody)>
    </table>
  </Styled(table)>
</Table>
`;

exports[`Table matches snapshot for exampleWithHead: exampleWithHead mount 1`] = `
.emotion-7 {
  border: 0;
  border-collapse: collapse;
  box-sizing: border-box;
  border-spacing: 0;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 14px;
  line-height: 1.1428571429;
  width: 100%;
}

@media only screen and (min-width:641px) {
  .emotion-7 {
    font-size: 16px;
    line-height: 1.25;
  }
}

.emotion-0 {
  font-family: "nta",Arial,sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.25;
  text-align: left;
  text-transform: none;
  width: 100%;
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-1 {
  border: 0;
  border-bottom: 1px solid #bfc1c3;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  padding: 0.63158em 1.05263em 0.47368em 0;
  text-align: left;
  text-transform: none;
  word-break: break-word;
}

.emotion-1:last-child {
  padding-right: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-3 th {
  font-weight: 700;
}

<Table
  body={
    <Row>
      <Cell>
        Example
      </Cell>
    </Row>
  }
  head={
    <Row>
      <Cell>
        Example
      </Cell>
    </Row>
  }
>
  <Styled(table)>
    <table
      className="emotion-7"
    >
      <Styled(caption)>
        <caption
          className="emotion-0"
        />
      </Styled(caption)>
      <Styled(thead)>
        <thead
          className="emotion-3"
        >
          <Row>
            <Styled(tr)>
              <tr
                className="emotion-2"
              >
                <Cell>
                  <Styled(td)>
                    <td
                      className="emotion-1"
                    >
                      Example
                    </td>
                  </Styled(td)>
                </Cell>
              </tr>
            </Styled(tr)>
          </Row>
        </thead>
      </Styled(thead)>
      <Styled(tbody)>
        <tbody
          className="emotion-2"
        >
          <Row>
            <Styled(tr)>
              <tr
                className="emotion-2"
              >
                <Cell>
                  <Styled(td)>
                    <td
                      className="emotion-1"
                    >
                      Example
                    </td>
                  </Styled(td)>
                </Cell>
              </tr>
            </Styled(tr)>
          </Row>
        </tbody>
      </Styled(tbody)>
    </table>
  </Styled(table)>
</Table>
`;
